tests/language/macros/error/apply_in_wrong_place_test.dart
// Copyright (c) 2024, the Dart project authors.  Please see the AUTHORS file
// for details. All rights reserved. Use of this source code is governed by a
// BSD-style license that can be found in the LICENSE file.
// SharedOptions=--enable-experiment=macros

@ClassTypesDeclareType(name: '', code: '')
// [error line 6, column 1]
// [analyzer] unspecified
// [cfe] unspecified
library;

import '../augment/impl/class_types_macro.dart';

// TODO(davidmorgan): cover all macro types and places.
